Fix avatar alignment

--- a/src/modules/core/directives/styles/yakaDirectives.css
+++ b/src/modules/core/directives/styles/yakaDirectives.css
@@ -5,6 +5,14 @@ yaka-avatar {
     display: inline-block;
 }
 
+yaka-avatar img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 yaka-avatar .yakaAvatarInitials {
     width: 100%;
     height: 100%;
